@@ -31,14 +31,9 @@ endif()
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(DEFAULT_ALSA ON)
     set(DEFAULT_PORTAUDIO OFF)
-
-    pkg_check_modules(LIBAVDEVICE libavdevice)
-    set(DEFAULT_AVDEVICE ${LIBAVDEVICE_FOUND})
 else()
     set(DEFAULT_ALSA OFF)
     set(DEFAULT_PORTAUDIO ON)
-
-    set(DEFAULT_AVDEVICE OFF)
 endif()
 
 if(WIN32)
@@ -59,35 +54,69 @@ add_feature_info(libavresample USE_AVRESAMPLE "Use libavresample instead of libs
 option(USE_LIBASS "Build with libass support" ON)
 add_feature_info(libass USE_LIBASS "Build with libass support")
 
-option(USE_ALSA "Build with ALSA support" ${DEFAULT_ALSA})
-add_feature_info(ALSA USE_ALSA "Build with ALSA support")
-option(USE_OPENGL "Build with OpenGL support" ON)
-add_feature_info(OpenGL USE_OPENGL "Build with OpenGL support")
-option(USE_PORTAUDIO "Build with PortAudio support" ${DEFAULT_PORTAUDIO})
-add_feature_info(PortAudio USE_PORTAUDIO "Build with PortAudio support")
+option(USE_INPUTS "Build with Inputs module" ON)
+add_feature_info(Inputs USE_INPUTS "Build with Inputs module")
+
+option(USE_MODPLUG "Build with Modplug module" ON)
+add_feature_info(Modplug USE_MODPLUG "Build with Modplug module")
+
+option(USE_EXTENSIONS "Build with Extensions module" ON)
+add_feature_info(Extensions USE_EXTENSIONS "Build with Extensions module")
+
+option(USE_VISUALIZATIONS "Build with Visualizations module" ON)
+add_feature_info(Visualizations USE_VISUALIZATIONS "Build with Visualizations module")
+
+option(USE_AUDIOFILTERS "Build with AudioFilters module" ON)
+add_feature_info(AudioFilters USE_AUDIOFILTERS "Build with AudioFilters module")
+
+option(USE_VIDEOFILTERS "Build with VideoFilters module" ON)
+add_feature_info(VideoFilters USE_VIDEOFILTERS "Build with VideoFilters module")
+
+option(USE_OPENGL2 "Build with OpenGL2 module" ON)
+add_feature_info(OpenGL2 USE_OPENGL2 "Build with OpenGL2 module")
+
+option(USE_PORTAUDIO "Build with PortAudio module" ${DEFAULT_PORTAUDIO})
+add_feature_info(PortAudio USE_PORTAUDIO "Build with PortAudio module")
+
 option(USE_TAGLIB "Build with tags editor" ON)
 add_feature_info(TagLib USE_TAGLIB "Build with tags editor")
 
-if(NOT DEFINED USE_FFMPEG_VAAPI)
-    pkg_check_modules(LIBS_VAAPI libva libva-x11 x11)
-endif()
-option(USE_FFMPEG_VAAPI "Build VAAPI acceleration into FFmpeg" ${LIBS_VAAPI_FOUND})
-add_feature_info(VAAPI USE_FFMPEG_VAAPI "Build VAAPI acceleration into FFmpeg")
+option(USE_FFMPEG "Build with FFmpeg module" ON)
+add_feature_info(FFmpeg USE_FFMPEG "Build with FFmpeg module")
 
-if(NOT DEFINED USE_FFMPEG_VDPAU)
-    pkg_check_modules(LIBS_VDPAU vdpau x11)
-endif()
-option(USE_FFMPEG_VDPAU "Build VDPAU acceleration into FFmpeg" ${LIBS_VDPAU_FOUND})
-add_feature_info(VDPAU USE_FFMPEG_VDPAU "Build VDPAU acceleration into FFmpeg")
+if(USE_FFMPEG)
+    if(NOT DEFINED USE_FFMPEG_VAAPI)
+        pkg_check_modules(LIBS_VAAPI libva libva-x11 x11)
+    endif()
+    option(USE_FFMPEG_VAAPI "Build VAAPI acceleration into FFmpeg" ${LIBS_VAAPI_FOUND})
+    add_feature_info(VAAPI USE_FFMPEG_VAAPI "Build VAAPI acceleration into FFmpeg")
 
-option(USE_FFMPEG_AVDEVICE "Build FFmpeg with libavdevice suport" ${DEFAULT_AVDEVICE})
-add_feature_info(libavdevice USE_FFMPEG_AVDEVICE "Build FFmpeg with libavdevice suport")
+    if(NOT DEFINED USE_FFMPEG_VDPAU)
+        pkg_check_modules(LIBS_VDPAU vdpau x11)
+    endif()
+    option(USE_FFMPEG_VDPAU "Build VDPAU acceleration into FFmpeg" ${LIBS_VDPAU_FOUND})
+    add_feature_info(VDPAU USE_FFMPEG_VDPAU "Build VDPAU acceleration into FFmpeg")
+
+    if(NOT DEFINED USE_FFMPEG_AVDEVICE)
+        if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+            pkg_check_modules(LIBAVDEVICE libavdevice)
+            set(DEFAULT_AVDEVICE ${LIBAVDEVICE_FOUND})
+        else()
+            set(DEFAULT_AVDEVICE OFF)
+        endif()
+    endif()
+    option(USE_FFMPEG_AVDEVICE "Build FFmpeg with libavdevice suport" ${DEFAULT_AVDEVICE})
+    add_feature_info(libavdevice USE_FFMPEG_AVDEVICE "Build FFmpeg with libavdevice suport")
+endif()
 
 if(NOT DEFINED USE_AUDIOCD)
     pkg_check_modules(LIBCD libcdio libcddb)
 endif()
-option(USE_AUDIOCD "Build with AudioCD support" ${LIBCD_FOUND})
-add_feature_info(AudioCD USE_AUDIOCD "Build with AudioCD support")
+option(USE_AUDIOCD "Build with AudioCD module" ${LIBCD_FOUND})
+add_feature_info(AudioCD USE_AUDIOCD "Build with AudioCD module")
+
+option(USE_ALSA "Build with ALSA module" ${DEFAULT_ALSA})
+add_feature_info(ALSA USE_ALSA "Build with ALSA module")
 
 if(NOT DEFINED USE_CHIPTUNE_GME)
     find_package(GME)
@@ -104,14 +133,14 @@ add_feature_info("Chiptune SIDPLAY" USE_CHIPTUNE_SID "Build Chiptune with SIDPLA
 if(NOT DEFINED USE_PULSEAUDIO)
     pkg_check_modules(LIBPULSE libpulse-simple)
 endif()
-option(USE_PULSEAUDIO "Build with PulseAudio support" ${LIBPULSE_FOUND})
-add_feature_info(PulseAudio USE_PULSEAUDIO "Build with PulseAudio support")
+option(USE_PULSEAUDIO "Build with PulseAudio module" ${LIBPULSE_FOUND})
+add_feature_info(PulseAudio USE_PULSEAUDIO "Build with PulseAudio module")
 
 if(NOT DEFINED USE_XVIDEO)
     pkg_check_modules(LIB_X11_XV x11 xv)
 endif()
-option(USE_XVIDEO "Build with XVideo support" ${LIB_X11_XV_FOUND})
-add_feature_info(XVideo USE_XVIDEO "Build with XVideo support")
+option(USE_XVIDEO "Build with XVideo module" ${LIB_X11_XV_FOUND})
+add_feature_info(XVideo USE_XVIDEO "Build with XVideo module")
 
 if(USE_QT5 AND NOT (Qt5Widgets_VERSION VERSION_LESS 5.6.0))
     option(USE_OPENGL_FOR_VISUALIZATIONS "Use \"QOpenGLWidget\" for Visualizations" OFF)
